implement ArcherRepository and IBaseRepository; refactor ArcherService to use repository pattern and update related tests